fix: margen del boton del nav

--- a/practicasCSS/Sheet02/style.css
+++ b/practicasCSS/Sheet02/style.css
@@ -20,7 +20,7 @@ nav {
 .navigation > button {
 	height: max-content;
 	align-self: center;
-	margin: 10px;
+	margin: 10px 0px 10px 10px;
 	background-color: white;
 	border-radius: 3px;
 	padding: 4px 21px;
