--- a/practicasJS/sheet06/style.css
+++ b/practicasJS/sheet06/style.css
@@ -1,127 +1,123 @@
 * {
-	box-sizing: border-box;
-	font-family: Ubuntu;
-    text-transform: capitalize;
+  box-sizing: border-box;
+  font-family: Ubuntu;
+  text-transform: capitalize;
 }
 body {
-	background-color: yellow;
+  background-color: yellow;
 }
+/* #region formas */
 .triangle {
-	top: 0;
-	width: 0;
-	height: 0;
-	border-bottom: 100px solid transparent;
-	position: fixed;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-bottom: 100px solid transparent;
+  position: fixed;
+  z-index: -1;
 }
 .triangle--r {
-	right: 0;
-	border-right: 100px solid black;
+  right: 0;
+  border-right: 100px solid black;
 }
 .triangle--l {
-	left: 0;
-	border-left: 100px solid black;
+  left: 0;
+  border-left: 100px solid black;
 }
 .circle {
-	position: fixed;
-	top: 90%;
-	height: 100px;
-	width: 100px;
-	background-color: red;
-	border-radius: 50%;
+  position: fixed;
+  top: 90%;
+  height: 100px;
+  width: 100px;
+  background-color: red;
+  border-radius: 50%;
+  z-index: -1;
 }
 .circle--r {
-	left: -3%;
+  left: -3%;
 }
 .circle--l {
-	right: -3%;
+  right: -3%;
 }
+/*#endregion*/
 .container {
-	width: 60%;
-	margin: 0 auto;
+  width: 60%;
+  margin: 0 auto;
 }
 nav {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .searchbar {
-	height: 2.5rem;
-	width: 80%;
-	border: none;
-	background-color: lightyellow;
-	text-align: center;
-	box-shadow: 0 0 16px rgb(183, 195, 55);
-}
-.pokecard__grid {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	column-gap: 1.5rem;
-	row-gap: 1rem;
-}
-img {
-	aspect-ratio: 1/1;
-	height: 100px;
-	width: 100px;
-	margin: 0 auto;
+  height: 2.5rem;
+  width: 80%;
+  border: none;
+  background-color: lightyellow;
+  text-align: center;
+  box-shadow: 0 0 16px rgb(183, 195, 55);
 }
 main {
-	margin-top: 2%;
+  margin-top: 2%;
+}
+.pokecard__grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  column-gap: 1.5rem;
+  row-gap: 1rem;
 }
 .pokecard__item {
-	background-color: white;
+  background-color: white;
+  border-radius: 4px;
 }
 article {
-	box-shadow: 0 0 8px rgb(183, 195, 55);
+  box-shadow: 0 0 8px rgb(183, 195, 55);
 }
-article > p {
-	padding: 0 1%;
-	margin: 0;
-	font-size: 75%;
-	width: fit-content;
-	background-color: #c0bfbf;
-	color: maroon;
+img {
+  aspect-ratio: 1/1;
+  height: 100px;
+  width: 100px;
+  margin: 0 auto;
 }
 article > header {
-	background-color: #c0bfbf;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	p {
-		margin: 0;
-	}
+  background-color: #c0bfbf;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 4px 4px 0 0;
+  p {
+    margin: 0;
+    padding: 0 0.5rem;
+    width: max-content;
+    background-color: rgb(175, 175, 175);
+    color: maroon;
+  }
 }
-footer {
-	background-color: rgb(255, 255, 255);
-	max-height: 300px;
-	h2 {
-		margin: 0.3rem;
-		padding: 0.2rem 1rem 0 1rem;
-	}
-	p {
-		margin: 0.3rem;
-		color: maroon;
-		padding: 0rem 1rem 0.5rem 1rem;
-	}
+article > footer {
+  background-color: rgb(255, 255, 255);
+  max-height: 300px;
+  h2 {
+    margin: 0.3rem;
+    padding: 0.2rem 1rem 0 1rem;
+  }
+  p {
+    margin: 0.3rem;
+    color: maroon;
+    padding: 0rem 1rem 0.5rem 1rem;
+  }
 }
 span {
-	border: 1px solid maroon;
-	border-radius: 7px;
-	padding: 0.1em 0.2em;
+  border: 1px solid maroon;
+  border-radius: 7px;
+  padding: 0.1em 0.2em;
 }
 .evolution {
-	margin: 0 0 2em 1rem;
-	padding: 0 0 0 0.2rem;
-	border-left: maroon solid 2px;
+  margin: 0 0 2em 1rem;
+  padding: 0 0 0 0.2rem;
+  border-left: maroon solid 2px;
+  text-transform: none;
 }
 .blankspace {
-	padding-bottom: 3rem;
-}
-header > p {
-	padding: 0 0.5rem;
-	width: max-content;
-	background-color: rgb(175, 175, 175);
-	margin-left: 0.5rem;
-	color: maroon;
+  padding-bottom: 3rem;
 }
 p > strong {
-	font-size: 130%;
+  font-size: 130%;
 }
